--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
     "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
-    "react-modal": "2.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
+    "react-scripts": "5.0.0",
     "sass-loader": "^6.0.7",
-    "style-loader": "0.18.2"
+    "style-loader": "0.18.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
